# things-api

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
mac-app/: Info.plist  Makefile  Package.swift  README.md
mac-app/Sources/ThingsAPIMenuBar/: AccountStore.swift  App.swift  MenuView.swift  Models.swift  ServerManager.swift  SettingsView.swift  SignupView.swift
src/: main.rs  models.rs
src/applescript/: commands.rs
src/routes/: mod.rs  tasks.rs  trash.rs
