[package]
name = "things-api"
version = "0.1.0"
edition = "2021"
description = "REST API server for Things 3 via AppleScript"
license = "MIT"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "6"
rand = "0.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
